<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contacto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.fcc.Contacto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/contacto_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/Titulo"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:text="@string/contacto_subtitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/TienesDudas"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu" />

        <TextView
            android:text="@string/contacto_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/numero" />

        <TextView
            android:text="@string/contacto_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email" />

        <TextView
            android:text="@string/contacto_habla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/habla"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu" />

        <Button
            android:text="@string/contacto_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnChat"
            android:onClick="lanzarMensajes"/>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>
