<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TabHost android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <FrameLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@android:id/tabcontent" >

                <RelativeLayout android:id="@+id/tab1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/txtEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/txtChat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/txtEmail"
                        android:layout_marginTop="22dp"
                        android:maxLines="25"
                        android:scrollbars="vertical" />

                    <EditText
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/inChat"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="133dp"
                        android:layout_width="wrap_content" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:id="@+id/imageButton"
                        android:layout_marginRight="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_alignBottom="@+id/inChat"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />


                </RelativeLayout>

                <LinearLayout android:id="@+id/tab2"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtEmail2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/inEquipo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text="@string/equipo" />

                        <Button
                            android:id="@+id/btnScan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="25dp"
                            android:layout_marginStart="25dp"
                            android:text="@string/escanear" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/inTitulo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text="@string/titulo" />

                        <TextView
                            android:id="@+id/txtFecha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_marginStart="25dp"
                            android:layout_weight="1"
                            android:text="fecha" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/inDescripcion"
                            android:layout_width="276dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textMultiLine"
                            android:text="@string/descripcion" />

                        <ImageButton
                            android:id="@+id/imageButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@android:drawable/ic_menu_send" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnCancelar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/cancelar" />

                        <Button
                            android:id="@+id/btnCerrar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/finalizar" />

                        <Button
                            android:id="@+id/btnNuevo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/nuevo" />
                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/lstIncidencias"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp" />

                </LinearLayout>

                <RelativeLayout android:id="@+id/tab3"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/txtEmail3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/txtChat3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/txtEmail3"
                        android:layout_marginTop="22dp"
                        android:maxLines="25"
                        android:scrollbars="vertical" />

                    <EditText
                        android:id="@+id/inChat3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="133dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textMultiLine" />

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/inChat3"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send" />

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spCorreo"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="49dp"
                        android:spinnerMode="dialog" />
                </RelativeLayout>

            </FrameLayout>

        </LinearLayout>

    </TabHost>

</LinearLayout>
